# datalad-installer

./: .appveyor.yml  .autorc  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  run-tests.sh  setup.cfg  tox.ini
.github/workflows/: release.yml  test-scenarios.yml  test.yml
src/: datalad_installer.py
test/: conftest.py  test_install.py  test_options.py  test_parse_args.py  test_util.py
test/data/parse-links/: sample.html  sample.json
