[metadata]
name = datalad-installer
version = attr:datalad_installer.__version__
description = Installation script for Datalad and related components
long_description = file:README.rst
long_description_content_type = text/x-rst
author = The DataLad Team and Contributors
author_email = team@datalad.org
maintainer = John Thorvald Wodder II
maintainer_email = datalad-installer@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/datalad/datalad-installer

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/datalad/datalad-installer
    Bug Tracker = https://github.com/datalad/datalad-installer/issues

[options]
py_modules = datalad_installer
package_dir =
    =src
include_package_data = True
python_requires = ~= 3.6

[options.entry_points]
console_scripts =
    datalad_installer = datalad_installer:main

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
